# c-threads-gl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: core.h  glad_impl.h  program_args.h  render_core.h  render_data.h  render_setup.h  thread1.h  thread_pool.h
resources/: shader.conf
resources/shaders/: AbstractVortex.shader  BalatroBackground.shader  Crude.shader  FunHolographic.shader  GrafEq.shader  composite.shader  fract113.shader  screen_coords.shader
src/: four_shaders.c  producer_consumer.c  thread1.c
src/four_shaders/: disc_worker.h  render_data.c  render_setup.c  thread_pool.c  thread_pool.h
src/four_shaders/render/: render_core.h  render_data.h  render_setup.c  render_setup.h  shader_utils.c  shader_utils.h
src/four_shaders/shaders/: composite_shader.h  composite_shader_impl.h  crude_shader_impl.h
